--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                "${file}",
+                "${file}","${fileDirname}/Sommet.cpp","${fileDirname}/Arete.cpp","${fileDirname}/Graph.cpp",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
